Fix regression of map preview not showing (#465)

--- a/packages/contentprocessing/assets/css/preview.css
+++ b/packages/contentprocessing/assets/css/preview.css
@@ -111,7 +111,7 @@
     width: 100%;
     max-width: 100%;
 }
-.preview__content video, .plyr {
+.preview__content video, .preview__content .map, .plyr {
     
     width: 100%;
     max-width: 100%;
